# stitch-animation

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: main.rs  opencv.rs  opencv_stitching_detailed.cpp  pipeline.rs
src/motion/: mod.rs  search.rs  vectors.rs
src/stitchers/: linear.rs
