[package]
name = "stitch-animation"
version = "0.1.1"
authors = ["The8472 <git@infinite-source.de>"]


[profile.release]
lto = true
codegen-units = 4
debug = true
panic = 'abort'


[profile.dev]
codegen-units = 4
panic = 'abort'

[dependencies]
#ffmpeg = {version = "0.2.0-alpha.2", git = "https://github.com/retrry/rust-ffmpeg.git", rev = "db95408164d278809b12e2e77ed90025ed6431ec" }
ffmpeg = {version = "0.2.0-alpha.2", git = "https://github.com/meh/rust-ffmpeg.git", rev = "8cf47c7ec6356a1d0a9cd53ffa67c424d2e800c7" }
#ffmpeg = {version = "0.2.0-alpha.2", git = "https://github.com/meh/rust-ffmpeg.git" }
libc = "0.2.0"
clap = "2.25.0"
rand = "0.3"
simd = "0.2.0"
euclid = "0.15.1"
rayon = "0.8.2"
itertools = "0.6.1"
float-ord = "0.1.2"


[build-dependencies]
gcc = "0.3.51"

[replace]
#"ffmpeg-sys:3.3.2" = {git = "https://github.com/meh/rust-ffmpeg-sys.git" }
"ffmpeg-sys:3.2.1" = {path = "./ffmpeg-sys"}

[features]
doc = ["simd/doc"]